// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute market endpoint happy path should return success for active market 1`] = `
{
  "data": {
    "result": {
      "category": "Macro",
      "close_timestamp": 1742407200,
      "event_ticker": "USIRATECUTS25",
      "market_status": 0,
      "market_ticker": "KXUSIRATECUTS25MAR",
      "no_ask_price": 52,
      "no_bid_price": 48,
      "no_mid_price": 50,
      "open_interest": 104923,
      "settlement_flag": 0,
      "updated_at": 978347471,
      "yes_ask_price": 52,
      "yes_bid_price": 48,
      "yes_mid_price": 50,
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market endpoint happy path should return success for closed market with yes result 1`] = `
{
  "data": {
    "result": {
      "category": "Politics",
      "close_timestamp": 1730847600,
      "event_ticker": "PRESWIN24",
      "market_status": 1,
      "market_ticker": "PRESWIN24",
      "no_ask_price": 0,
      "no_bid_price": 0,
      "no_mid_price": 0,
      "open_interest": 250000,
      "settlement_flag": 1,
      "updated_at": 978347471,
      "yes_ask_price": 100,
      "yes_bid_price": 100,
      "yes_mid_price": 100,
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market endpoint happy path should return success for settled market with no result 1`] = `
{
  "data": {
    "result": {
      "category": "Economics",
      "close_timestamp": 1735689599,
      "event_ticker": "GDP2024",
      "market_status": 2,
      "market_ticker": "GDP2024Q4",
      "no_ask_price": 0,
      "no_bid_price": 0,
      "no_mid_price": 0,
      "open_interest": 50000,
      "settlement_flag": 2,
      "updated_at": 978347471,
      "yes_ask_price": 0,
      "yes_bid_price": 0,
      "yes_mid_price": 0,
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market endpoint happy path should use default endpoint when not specified 1`] = `
{
  "data": {
    "result": {
      "category": "Macro",
      "close_timestamp": 1742407200,
      "event_ticker": "USIRATECUTS25",
      "market_status": 0,
      "market_ticker": "KXUSIRATECUTS25MAR",
      "no_ask_price": 52,
      "no_bid_price": 48,
      "no_mid_price": 50,
      "open_interest": 104923,
      "settlement_flag": 0,
      "updated_at": 978347471,
      "yes_ask_price": 52,
      "yes_bid_price": 48,
      "yes_mid_price": 50,
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market endpoint upstream failures should handle 401 unauthorized error 1`] = `
{
  "errorMessage": "Provider request failed with status 401: {"error":"Unauthorized"}",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market endpoint upstream failures should handle 404 not found error 1`] = `
{
  "errorMessage": "Provider request failed with status 404: {"error":"Market not found"}",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market endpoint upstream failures should handle 500 server error 1`] = `
{
  "errorMessage": "Provider request failed with status 500: {"error":"Internal Server Error"}",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market endpoint upstream failures should handle empty response from upstream 1`] = `
{
  "errorMessage": "No market data returned for EMPTY_MARKET",
  "statusCode": 502,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute market endpoint validation errors should fail on empty request 1`] = `
{
  "error": {
    "message": "[Param: market_ticker] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute market endpoint validation errors should fail on invalid endpoint 1`] = `
{
  "error": {
    "message": "Adapter does not have a "invalid_endpoint" endpoint.",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 404,
}
`;

exports[`execute market endpoint validation errors should fail on missing market_ticker 1`] = `
{
  "error": {
    "message": "[Param: market_ticker] param is required but no value was provided",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;
